WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149915
Garbage pixels on enphaseenergy.com site
https://bugs.webkit.org/show_bug.cgi?id=149915
Summary
Garbage pixels on enphaseenergy.com site
Simon Fraser (smfr)
Reported
2015-10-07 22:06:13 PDT
Garbage pixels on enphaseenergy.com site
Attachments
Patch
(8.46 KB, patch)
2015-10-07 22:09 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews107 for mac-mavericks-wk2
(804.37 KB, application/zip)
2015-10-07 22:35 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews100 for mac-mavericks
(624.82 KB, application/zip)
2015-10-07 22:41 PDT
,
Build Bot
no flags
Details
Patch
(9.02 KB, patch)
2015-10-08 21:34 PDT
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-10-07 22:09:01 PDT
Created
attachment 262674
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-10-07 22:09:33 PDT
rdar://problem/22976184
Build Bot
Comment 3
2015-10-07 22:35:45 PDT
Comment on
attachment 262674
[details]
Patch
Attachment 262674
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/256237
New failing tests: compositing/geometry/bounds-ignores-hidden.html
Build Bot
Comment 4
2015-10-07 22:35:48 PDT
Created
attachment 262675
[details]
Archive of layout-test-results from ews107 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Build Bot
Comment 5
2015-10-07 22:41:51 PDT
Comment on
attachment 262674
[details]
Patch
Attachment 262674
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/256259
New failing tests: compositing/geometry/bounds-ignores-hidden.html
Build Bot
Comment 6
2015-10-07 22:41:54 PDT
Created
attachment 262676
[details]
Archive of layout-test-results from ews100 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-mavericks Platform: Mac OS X 10.9.5
alan
Comment 7
2015-10-07 22:46:09 PDT
Comment on
attachment 262674
[details]
Patch Guess it's time for a bit of a rebaselining.
Simon Fraser (smfr)
Comment 8
2015-10-08 08:31:01 PDT
Comment on
attachment 262674
[details]
Patch I don't think this approach is correct here. We should probably try to avoid making layers for the <html> etc in front of the tiles, when they just paint the root background anyway.
Simon Fraser (smfr)
Comment 9
2015-10-08 21:34:07 PDT
Created
attachment 262743
[details]
Patch
Darin Adler
Comment 10
2015-10-09 09:29:52 PDT
Comment on
attachment 262743
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=262743&action=review
> Source/WebCore/rendering/RenderLayer.cpp:6131 > + // This is the documentElement's layer, whose background is usually painted by the RenderView's layer.
The word “usually” here is unnecessarily vague and makes me worry. Is there a way to say this that’s more precise yet still terse?
Simon Fraser (smfr)
Comment 11
2015-10-09 14:08:15 PDT
https://trac.webkit.org/r190818
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug