Garbage pixels on enphaseenergy.com site https://bugs.webkit.org/show_bug.cgi?id=149915 rdar://problem/22976184

Reviewed by Darin Adler.

Source/WebCore:

When the <html> gets a composited RenderLayer, and we ask whether its background
is opaque, return false, since the document element's background propagates
to the root, and is painted by the RenderView.

Also improve the compositing logging to indicate when fore- and background layers
are present.

Test: compositing/contents-opaque/negative-z-before-html.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGeometry):
* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::logLayerInfo):

LayoutTests:

New ref test. Also update the expected result for another test that uses negative
z-index children.

* compositing/contents-opaque/body-background-painted-expected.txt:
* compositing/contents-opaque/negative-z-before-html-expected.html: Added.
* compositing/contents-opaque/negative-z-before-html.html: Added.
* platform/mac-wk2/compositing/contents-opaque/body-background-painted-expected.txt:

Canonical link: https://commits.webkit.org/168114@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190818 268f45cc-cd09-0410-ab3c-d52691b4dbfc